Fix misused dri_bo_reference()

The object returned from dri_bo_alloc() has been referenced.

This commit fixes https://bugs.freedesktop.org/show_bug.cgi?id=86913

Signed-off-by: Xiang, Haihao <haihao.xiang@intel.com>
Reviewed-by: Zhao, Yakui <yakui.zhao@intel.com>
(cherry picked from commit aa10929df05ba1668cce3960fe03be2c53e9314b)